# Wheelhouse

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  NOTICE  PRIVACY.md  PROVENANCE.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  bootstrap.ps1  install-wheelhouse.ps1  pyrightconfig.json
services/stt_providers/distil_medium_en/: config.toml  launcher.py  main.py  pyproject.toml
services/stt_providers/google_stt_server/: README.md  analyze_google_stt_usage.py  config.toml  config_loader.py  config_updater.py  direct_streamer.py  launcher.py  main.py  pyproject.toml  usage_metrics.py
services/stt_providers/shared/: README.md  __init__.py  hints.txt  hints_updater.py  pyproject.toml
services/stt_providers/sherpa_offline_parakeet_stt_server/: README.md  __init__.py  config.toml  launcher.py  main.py  pyproject.toml  sherpa_engine.py
services/syscheck/: ikon_hardware.md  is_admin_true.json  pyproject.toml  recommendations.py  syscheck.py
services/syscheck/tests/: test_recommendations.py  test_syscheck.py
services/wheelhouse/: README.md  __init__.py  app.py  click_counter.py  click_first_use_hint.py  click_notice_toast.py  click_notice_toast_wording.py  click_overlay_state.py  click_snapshot_summary_cache.py  config.toml.example  config_service.py  create_pattern_dialog.py  event_bus.py  events.py  grant_prompt_toast.py  gui.py  help_chat_window.py  input_proc.py  issues to be resolved by refactoring.md  launcher.py  main.py  overlay_focus_hooks.py  overlay_paint_window.py  pattern_help_dialog.py  pattern_manager_dialog.py  possible unused modules.md  pyproject.toml  rejection_help_window.py  rejection_rate_limit.py  rejection_toast.py  rejection_toast_wording.py  service_manager.py  soft_allow_write_failed_toast.py  state_manager.py  terminal_editor_window.py  test_phase0.py  working_indicator_config.py
services/wheelhouse/ai/: __init__.py  help_chat.py  prompts.py  service.py  speech_output.py
services/wheelhouse/coordinators/: __init__.py  brightness_coordinator.py
services/wheelhouse/data/: soft_allow_starter_tuples.toml
services/wheelhouse/features/: __init__.py  window_mover.py
services/wheelhouse/handlers/: audio_monitor.py  gamma_dimmer.py  hid_listener.py  mouse_handler.py  software_dimmer.py  volume_router.py
services/wheelhouse/integrations/: __init__.py  bravia_control.py  display_control_base.py  display_discovery.py  gemini_client.py  internal_panel_control.py  sonos_control.py  speech_to_text_server.py  websocket_manager.py
services/wheelhouse/knowledge/: wheelhouse_help.md
services/wheelhouse/plugins/: __init__.py  base.py  bravia_plugin.py  idle_monitor_plugin.py  internal_panel_plugin.py  registry.py  sonos_plugin.py  system_volume_plugin.py  window_positioning_plugin.py
services/wheelhouse/scripts/: capture_rejected_controls.py
services/wheelhouse/shared/: clear_overlay.py  click_element.py  click_notice.py  consumed_token_set.py  context_mirror.py  correlation_token.py  declined_tuples_schema.py  editor_ipc_responder.py  editor_lifecycle.py  editor_pending_request.py  editor_rebuild.py  editor_rebuilt.py  editor_rebuilt_handler.py  grant_prompt_no_clicked.py  grant_prompt_yes_clicked.py  grapheme.py  insert_editor_word.py  ipc_schema_validation.py  ledger.py  monitor_geometry.py  overlay_bitmap.py  overlay_dpi_resolver.py  overlay_state_changed.py  paint_overlay.py  pin_snapshot.py  rejection_category.py  rejection_token_cache.py  retract_editor_text.py  retry_dictation_by_token.py  schema_guard.py  show_numbered_overlay.py  snapshot_item_clicked.py  soft_allow_schema.py  start_overlay_walk.py  text_target_grant_prompt.py  text_target_rejection.py  try_anyway_clicked.py  walk_snapshot_serde.py
services/wheelhouse/speech/: SPEECH_PROCESSOR_GUIDE.md  __init__.py  action_catalog.py  actions.py  click_parser.py  command_engine.py  domain.py  focus_redirect_integration.py  focus_redirect_policy.py  key_names.py  number_word_parser.py  overlay_click_router.py  pattern_catalog.py  pattern_explainer.py  pattern_manager.py  pattern_matcher.py  pattern_tester.py  pattern_transform.py  phrase_expression.py  router.py  safe_regex.py  speech_handler.py  speech_processor.py  text_transforms.py  word_event.py
services/wheelhouse/stt/: __init__.py  audio_capture.py  base.py  remote_stt_launcher.py  stt_manager.py  vad.py
services/wheelhouse/tests/: _pywin32_stub.py  conftest.py  test_action_catalog.py  test_actions.py  test_adversarial_stt.py  test_app.py  test_app_events.py  test_app_trace_id.py  test_apply_hotword.py  test_browser_dom_corrections.py  test_clear_overlay.py  test_clear_winner_rule.py  test_click_config.py  test_click_counter.py  test_click_element.py  test_click_executor.py  test_click_executor_popup_probe.py  test_click_first_use_hint.py  test_click_flow.py  test_click_notice.py  test_click_overlay_state.py  test_click_parser.py  test_click_snapshot_summary_cache.py  test_command_engine_gaps.py  test_command_engine_replacement_editor_routing.py  test_confidence_scorer.py  test_config_service.py  test_consumed_token_set.py  test_create_pattern_dialog.py  test_declined_tuples_schema.py  test_declined_writer.py  test_editor_ipc_responder.py  test_editor_pending_request.py  test_editor_rebuild.py  test_editor_rebuilt.py  test_editor_rebuilt_handler.py  test_element_finder.py  test_element_finder_popups.py  test_element_types.py  test_elevation_check.py  (+150 more)
services/wheelhouse/ui/: __init__.py  browser_dom_corrections.py  clear_winner_rule.py  click_config.py  click_executor.py  clipboard.py  clipboard_operations.py  clipboard_poller.py  clipboard_sequence.py  confidence_scorer.py  console_probe_client.py  console_probe_helper.py  context.py  element_finder.py  element_types.py  elevation_check.py  hwnd_utils.py  invoke_error_codes.py  prompt_detector.py  rejection_text_cache.py  response_handler.py  router.py  selection_transformer.py  shadow_buffer.py  terminal_editor_proxy.py  text_perfector.py  text_target.py  (+8 more)
(+274 files in other folders)
