[project]
name = "wheelhouse"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "David Hite", email = "14855188+ghbaud@users.noreply.github.com"},
]
dependencies = [
    "comtypes>=1.4.10,<2",
    "ftfy>=6.3.1,<7",
    "google-generativeai>=0.8.5,<0.9",
    "keyboard>=0.13.5,<0.14",
    "pillow>=12.2.0,<13",
    "plyer>=2.1.0,<3",
    "psutil>=7.0.0,<8",
    "pycaw>=20240210,<20240211",
    "pyperclip>=1.9.0,<2",
    "pynput>=1.8.1,<2",
    "PySide6>=6.7.0,<7",
    "pystray>=0.19.5,<0.20",
    "pywin32>=310,<311",
    "pywinusb>=0.4.2,<0.5",
    "requests>=2.32.3,<3",
    "soco>=0.30.10,<0.31",
    "uiautomation>=2.0.18,<3",
    "websockets>=15.0.1,<16",
    "winsdk>=1.0.0b10,<2",
    "WMI>=1.5.1,<2",
    "assemblyai>=0.43.1,<0.44",
    "sounddevice>=0.4.7,<0.5",
    "numpy>=1.26.4,<2",
    "deepgram-sdk>=3.2.7,<4",
    "google-cloud-speech>=2.30.0",
    "grpcio>=1.56",
    "protobuf>=4.23",
    "tomli-w>=1.2.0,<2",
    "aiohttp>=3.13.2,<4",
    "pysilero-vad>=3.0.0,<3.3.0",
    "concurrent-log-handler>=0.9.25,<0.10",
    "pyttsx3>=2.99,<3",
    "markdown>=3.10.2,<4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "jinja2>=3.1.0,<4",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "pytest-qt>=4.5.0,<5",
    "hypothesis>=6.156.1",
]

[tool.uv]
package = false
environments = ["sys_platform == 'win32'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["."]
junit_family = "xunit2"
addopts = "--junitxml=test-results.xml"
timeout = 30
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may have I/O)",
    "slow: Tests that take >1s",
    "windows_only: Tests requiring Windows APIs",
]
