[project]
name = "google-stt-server"
version = "0.2.0"
description = "Google Speech-to-Text server for WheelHouse"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "David Hite", email = "14855188+ghbaud@users.noreply.github.com"},
]
dependencies = [
    "wheelhouse-shared",
    "google-cloud-speech>=2.30.0",
    "grpcio>=1.56",
    "protobuf>=4.23",
    "websockets>=15.0.1,<16",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "setuptools>=80.9.0,<81",
    "tomlkit>=0.13.2,<0.14",
    "winsdk>=1.0.0b10,<2",
    "pysilero-vad",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
package = false
environments = ["sys_platform == 'win32'"]

[tool.uv.sources]
wheelhouse-shared = { path = "../shared", editable = true }
